[gd_scene load_steps=10 format=3 uid="uid://xjnmcecpr5sv"]

[ext_resource type="Script" path="res://Scripts/attachview.gd" id="1_uil01"]
[ext_resource type="Theme" uid="uid://dvnwmjqtsjco" path="res://Themes/UpgradeButtonTheme.tres" id="2_4xgv0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y84ll"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgiux"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofsls"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6m3y"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5fyk"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qyee"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_width_left = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qxi6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0.392157)
shadow_size = 1

[node name="AttachView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_uil01")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="Panel" type="Panel" parent="MarginContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y84ll")

[node name="TopPanel" type="Panel" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vgiux")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ForgeUp" type="Button" parent="MarginContainer/GridContainer/TopPanel/MarginContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../LeftPanel/MarginContainer/ForgeLeft")
focus_neighbor_right = NodePath("../../../RightPanel/MarginContainer/ForgeRight")
focus_neighbor_bottom = NodePath("../../../MiddlePanel/MarginContainer/ForgeForward")
theme = ExtResource("2_4xgv0")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/TopPanel/MarginContainer/ForgeUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.0
offset_right = 50.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Forge Up"

[node name="Panel3" type="Panel" parent="MarginContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y84ll")

[node name="LeftPanel" type="Panel" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ofsls")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ForgeLeft" type="Button" parent="MarginContainer/GridContainer/LeftPanel/MarginContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../TopPanel/MarginContainer/ForgeUp")
focus_neighbor_right = NodePath("../../../MiddlePanel/MarginContainer/ForgeForward")
focus_neighbor_bottom = NodePath("../../../BottomPanel/MarginContainer/ForgeDown")
theme = ExtResource("2_4xgv0")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/LeftPanel/MarginContainer/ForgeLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -10.5
offset_right = 62.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Forge Left"

[node name="MiddlePanel" type="Panel" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u6m3y")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/MiddlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ForgeForward" type="Button" parent="MarginContainer/GridContainer/MiddlePanel/MarginContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../LeftPanel/MarginContainer/ForgeLeft")
focus_neighbor_top = NodePath("../../../TopPanel/MarginContainer/ForgeUp")
focus_neighbor_right = NodePath("../../../RightPanel/MarginContainer/ForgeRight")
focus_neighbor_bottom = NodePath("../../../BottomPanel/MarginContainer/ForgeDown")
theme = ExtResource("2_4xgv0")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/MiddlePanel/MarginContainer/ForgeForward"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -23.5
offset_right = 50.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Forge
Forward"
horizontal_alignment = 1

[node name="RightPanel" type="Panel" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_o5fyk")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ForgeRight" type="Button" parent="MarginContainer/GridContainer/RightPanel/MarginContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../MiddlePanel/MarginContainer/ForgeForward")
focus_neighbor_top = NodePath("../../../TopPanel/MarginContainer/ForgeUp")
focus_neighbor_bottom = NodePath("../../../BottomPanel/MarginContainer/ForgeDown")
theme = ExtResource("2_4xgv0")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/RightPanel/MarginContainer/ForgeRight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -11.0
offset_right = 67.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Forge Right"

[node name="Panel7" type="Panel" parent="MarginContainer/GridContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y84ll")

[node name="BottomPanel" type="Panel" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6qyee")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ForgeDown" type="Button" parent="MarginContainer/GridContainer/BottomPanel/MarginContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../LeftPanel/MarginContainer/ForgeLeft")
focus_neighbor_top = NodePath("../../../MiddlePanel/MarginContainer/ForgeForward")
focus_neighbor_right = NodePath("../../../RightPanel/MarginContainer/ForgeRight")
theme = ExtResource("2_4xgv0")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/BottomPanel/MarginContainer/ForgeDown"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -11.0
offset_right = 70.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Forge Down"

[node name="InfoPanel" type="Panel" parent="MarginContainer/GridContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_y84ll")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="MarginContainer/GridContainer/InfoPanel/MarginContainer"]
custom_minimum_size = Vector2(65, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_8qxi6")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/InfoPanel/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -11.5
offset_right = 29.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Q: Back"

[connection signal="pressed" from="MarginContainer/GridContainer/TopPanel/MarginContainer/ForgeUp" to="." method="_on_forge_up_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/LeftPanel/MarginContainer/ForgeLeft" to="." method="_on_forge_left_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/MiddlePanel/MarginContainer/ForgeForward" to="." method="_on_forge_forward_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/RightPanel/MarginContainer/ForgeRight" to="." method="_on_forge_right_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/BottomPanel/MarginContainer/ForgeDown" to="." method="_on_forge_down_pressed"]
